# Pac_Utils

./: .gitignore  CMakeLists.txt  Pac_Utils.sln
.github/workflows/: cmake-steamdeck.yml  cmake.yml  msbuild.yml
src/libNep/: Helper.cpp  Helper.h  bitstream.cpp  bitstream.h  pac.cpp  pac.h  pacfilesource.cpp  systemfilesource.cpp  systemfilesource.h
src/libPac/: Helper.cpp  Helper.h  bitstream.h  compressor.cpp  compressor.h  defines.h  libPac.vcxproj  libPac.vcxproj.filters  membuf.h  pacfilesource.cpp  pacfilesource.h
src/libPac_Cs/: Class1.cs  LibPac.cs  Pac.cs
src/pack/: pack.cpp
src/patch/: patch.cpp
src/unpack/: unpack.cpp
